# motedb

./: .gitignore  BENCHMARK.md  BENCHMARK_REPORT.md  CHANGELOG.md  COMPETITIVE_ANALYSIS.md  Cargo.toml  LICENSE  MULTIMODAL_COMPETITIVE_ANALYSIS.md  PERFORMANCE_REPORT.md  README.md  RELEASE-v0.2.0.md  SCALING.md  deny.toml  rust_out
.cargo/: config.toml
.github/workflows/: ci.yml  publish.yml
.zcode/plans/: plan-sess_abb2c954-05fb-477e-9d0a-3e22261e2449.md
docs/: 01-quick-start.md  02-installation.md  03-sql-operations.md  04-batch-operations.md  05-transactions.md  06-indexes-overview.md  07-column-index.md  08-vector-index.md  09-text-index.md  10-spatial-index.md  11-timestamp-index.md  12-performance.md  13-data-types.md  14-api-reference.md  15-best-practices.md  16-faq.md  README.md  benchmark_report_2026-05-19.md  benchmark_report_2026-05-20.md  optimization-plan.md  optimization_proposal.md
docs/superpowers/plans/: 2026-06-16-columnar-append-only-store.md
docs/superpowers/specs/: 2026-06-16-columnar-append-only-store-design.md
examples/: bench_300k.rs  bench_columnar.rs  bench_index_in.rs  bench_memory.rs  bench_multimodal_vs_competitors.rs  bench_parallel.rs  bench_scan_breakdown.rs  bench_stability.rs  bench_vs_sqlite.rs  crud.rs  debug_delete.rs  hello_world.rs  logging.rs  mem_breakdown.rs  mem_minimal.rs  mem_profile.rs  mem_realistic.rs  mem_small.rs  mem_steady.rs  mem_step.rs  p99_test.rs  repro_ins.rs  repro_regression.rs  test_intersection.rs  test_minimal.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_sql_parser.rs  fuzz_wal_recover.rs
src/: api.rs  config.rs  error.rs  ffi.rs  lib.rs  manifest.rs
src/cache/: mod.rs  row_cache.rs
src/catalog/: mod.rs  registry.rs
src/database/: core.rs  crud.rs  helpers.rs  index_metadata.rs  mem_buffer.rs  mod.rs  persistence.rs  pk_cache.rs  table.rs  timeseries.rs  transaction.rs  ttl_gc.rs  write_controller.rs
src/database/indexes/: column.rs  dashmap_migration.md  ioctree.rs  mod.rs  spatial.rs  text.rs  timestamp.rs  vector.rs
src/distance/: cosine.rs  euclidean.rs  mod.rs
src/index/: btree.rs  btree_generic.rs  builder.rs  cached_index.rs  column_value.rs  fresh_graph.rs  fuzzy_search.rs  manager.rs  mod.rs  phrase_search.rs  primary_key.rs  spatial_hybrid.rs  text_dictionary.rs  text_encoding.rs  text_fts.rs  text_types.rs  tokenizers.rs
src/index/diskann/: compaction.rs  fresh_graph.rs  index.rs  mod.rs  multi_level.rs  sst.rs
src/index/ioctree/: leaf_store.rs  mod.rs  node.rs  pending.rs  persistence.rs  search.rs
src/index/vamana/: config.rs  disk_graph.rs  diskann_index.rs  mod.rs  pruner.rs  sq8.rs  sq8_vectors.rs
src/query/: executor.rs  mod.rs  planner.rs
src/sql/: ast.rs  evaluator.rs  executor.rs  lexer.rs  mod.rs  optimizer.rs  parser.rs  row_converter.rs  simd_ops.rs  token.rs
src/sql/join/: hash_join.rs  index_join.rs  mod.rs
src/storage/: checksum.rs  file_manager.rs  mod.rs  row_format.rs
src/storage/col_segment/: manifest.rs  merge.rs  mod.rs  segment.rs  store.rs
src/storage/columnar/: column_encoding.rs  config.rs  gorilla.rs  mod.rs  segment.rs  segment_manager.rs  store.rs  write_buffer.rs
src/storage/lsm/: blobstore.rs  bloom.rs  columnar.rs  compaction.rs  engine.rs  memtable.rs  merging_iterator.rs  mod.rs  single_file_lsm.rs  sstable.rs  unified_memtable.rs
src/storage/manifest/: manifest.rs  mod.rs  version.rs
src/txn/: coordinator.rs  lock_manager.rs  mod.rs  mvcc.rs  recovery.rs  version_store.rs  wal.rs
src/types/: mod.rs  spatial.rs  table.rs  tensor.rs  text.rs  timestamp.rs
tests/: acid_test.rs  bench_2m.rs  bench_acid.rs  bench_batch_ops.rs  bench_compare.rs  bench_comprehensive.rs  bench_concurrent.rs  bench_index_ops.rs  bench_multimodal.rs  bench_multimodal_full.rs  bench_multimodal_ops.rs  bench_perf_report.rs  bench_quick_baseline.rs  bench_release.rs  bench_report.rs  bench_resource.rs  bench_sql_queries.rs  bench_timeseries_index.rs  bench_v060_report.rs  bench_vs_sqlite_100k.rs  bench_vs_sqlite_v05.rs  perf_test.rs  stress_300k.rs  stress_test.rs  test_acid_audit.rs  test_acid_comprehensive.rs  test_advanced_hunt.rs  test_api_correctness.rs  test_btree_integrity.rs  test_bug_hunt.rs  test_bug_hunt2.rs  test_bug_hunt3.rs  test_bug_hunt4.rs  test_bug_hunt5.rs  test_bug_hunt6.rs  test_bug_hunt7.rs  test_bug_hunt_v10.rs  test_bug_hunt_v11.rs  test_bug_hunt_v12.rs  test_bug_hunt_v13.rs  (+80 more)
tests/common/: mod.rs
