[package]
name = "motedb"
version = "0.1.7"
edition = "2021"
description = "AI-native embedded multimodal database for embodied intelligence (robots, AR glasses, industrial arms)."
license = "MIT"
repository = "https://github.com/motedb/motedb"
homepage = "https://github.com/motedb/motedb"
documentation = "https://docs.rs/motedb"
readme = "docs/README.md"
keywords = ["database", "embedded", "vector", "multimodal"]
categories = ["database", "embedded", "algorithms"]
authors = ["motedb <motedb@126.com>"]
publish = true

[lib]
name = "motedb"
path = "src/lib.rs"
crate-type = ["rlib", "staticlib", "cdylib"]  # rlib = Rust库(允许examples), staticlib = 静态库, cdylib = 动态库

[[bin]]
name = "motedb-cli"
path = "src/bin/motedb-cli.rs"

[dependencies]
# Memory-mapped file I/O (used by: spatial_hybrid, diskann/sst)
memmap2 = "0.9"

# Compression (used by: LSM engine, sstable, memtable, txn)
snap = "1.1"  # Snappy compression (fast, moderate ratio)

# CRC32 for data integrity (used by: manifest, checksum, WAL)
crc32fast = "1.4"

# High-performance locks (used throughout: indexes, storage, transactions)
parking_lot = "0.12"

# LRU cache (used by: btree, spatial, text_dictionary, cached_index, row_cache)
lru = "0.12"

# Roaring Bitmap for text index posting lists (used by: text_types)
roaring = "0.10"

# Fast hash algorithm (used throughout: HashMaps, Sets)
ahash = "0.8"

# Serialization (used by: all indexes, storage, catalog, txn, SQL)
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"  # Binary serialization for indexes and storage
serde_json = "1.0"  # JSON for manifest and metadata

# Error handling (used throughout)
thiserror = "1.0"

# System calls for durability (used by: btree, diskann, manifest, WAL)
libc = "0.2"

# Random number generation (used by: tests, evaluator RANDOM(), benchmarks)
rand = "0.8"

# Data parallelism (used by: diskann, sstable parallel scan)
# Edge builds can disable rayon for smaller binary (saves ~200KB)
rayon = { version = "1.8", optional = true }
dashmap = "6.1.0"  # Concurrent HashMap

# Perfect hash map for O(1) keyword lookup (used by: SQL lexer)
phf = { version = "0.11", features = ["macros"] }

# 🔌 Optional dependencies: Tokenizer plugins (feature-gated)
jieba-rs = { version = "0.7", optional = true }

# 🔍 Optional: Memory profiling (feature-gated)
tikv-jemallocator = { version = "0.5", optional = true }
tikv-jemalloc-ctl = { version = "0.5", optional = true }

[dev-dependencies]
# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Temporary directories for testing
tempfile = "3.0"

# Memory profiling with jemalloc
tikv-jemallocator = "0.5"
tikv-jemalloc-ctl = "0.5"

# Command line argument parsing (for examples)
clap = { version = "4.4", features = ["derive"] }

# Enable jieba tokenizer by default
[features]
default = ["tokenizer-jieba", "rayon"]  # Full build: jieba + parallelism
default-edge = []  # Edge/IoT minimal: no tokenizer, no rayon (smallest binary)
# 可选分词器插件
tokenizer-jieba = ["jieba-rs"]  # 中文分词（Jieba）
tokenizer-all = ["tokenizer-jieba"]  # 启用所有分词器
# 内存分析（用于性能调优）
mem-profiling = ["tikv-jemallocator", "tikv-jemalloc-ctl"]
# ⚡ 数据并行化（可选，减少二进制大小 ~200KB）
rayon = ["dep:rayon"]  # 启用 Rayon 并行处理

[profile.release]
opt-level = 3  # 🚀 优化性能（3 = 最快，z = 最小）
lto = "fat"    # 🔥 Fat LTO：最激进的优化（+20% 性能）
codegen-units = 1  # 单一代码生成单元（更好的优化）
strip = true   # 移除符号表（-30% 大小）
panic = "abort"  # panic 直接 abort（-10% 大小）

[profile.release-small]
# 🆕 嵌入式模式：优化二进制大小
inherits = "release"
opt-level = "z"  # 优化大小
lto = "fat"

[profile.release-test]
# Benchmark profile: release optimizations but unwind for test harness
inherits = "release"
panic = "unwind"
strip = false
